--- a/veg-planet-app/src/app/app.component.html
+++ b/veg-planet-app/src/app/app.component.html
@@ -106,6 +106,10 @@
     </div>
   <!--Form-->
   <form  id="signIn" class="w-25 p-3 form-pos " *ngIf="show">
+      <div class="form-group">
+          <label for="email">Email address:</label>
+          <input type="text" class="form-control" pattern="[A-Za-z]{3-10}">
+      </div>
     <div class="form-group">
       <label for="email">Email address:</label>
       <input type="email" class="form-control" id="email">
